added a delete button

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Daily Journal</h1>
     </header>
-    <main>
+    <main class="journal">
         <div class="main-container">
             <div class="form-container">
                 <form>
